@@ -69,7 +69,7 @@ sub md_authres {
   $spfmail =~ s/^<//;
   $spfmail =~ s/>$//;
   if(defined $spfmail and $spfmail =~ /\@/) {
-    if(is_public_ip4_address($relayip)) {
+    if(is_public_ip4_address($relayip) or is_public_ip6_address($relayip)) {
       my $spf_server  = Mail::SPF::Server->new();
       my $request     = Mail::SPF::Request->new(
         scope           => 'mfrom',
