@@ -2,6 +2,11 @@ WARNING: Before upgrading MIMEDefang, please search this file for
 *** NOTE INCOMPATIBILITY ** to see if anything has changed that might
 affect your filter.
 
+2022-05-24 Giovanni Bechis <g.bechis@snb.it>
+
+	* add is_public_ip6_address to check if an ipv6 address
+	  is local
+
 2022-05-19 Giovanni Bechis <g.bechis@snb.it>
 
 	* add md_authres method to generate a basic Authentication-Results
